kubernetes/apps/admin-tools/pgadmin.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-http
  namespace: admin
spec:
  ports:
    - protocol: TCP
      port: 8080
      targetPort: http
  selector:
    app: pgadmin
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
  namespace: admin
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      terminationGracePeriodSeconds: 10
      securityContext:
        fsGroup: 5050
      containers:
        - name: pgadmin
          image: dpage/pgadmin4:9.13
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          volumeMounts:
            - name: pgadmin-config
              mountPath: /pgadmin4/servers.json
              subPath: servers.json
              readOnly: true
            - name: pgadmin-data
              mountPath: /var/lib/pgadmin
            - name: pgadmin-config
              mountPath: /pgadmin4/config_distro.py
              subPath: config_distro.py
            - name: tmp
              mountPath: /tmp
          securityContext:
            # capabilities:
            #   drop:
            #   - ALL
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            runAsUser: 5050
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
      volumes:
        - name: pgadmin-config
          configMap:
            name: pgadmin-config
        - name: pgadmin-data
          persistentVolumeClaim:
            claimName: pgadmin-data
        - name: tmp
          emptyDir: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: homelab-internal
  name: pgadmin-ingress
  namespace: admin
spec:
  ingressClassName: nginx
  rules:
    - host: pgadmin.${serviceDomain}
      http:
        paths:
          - backend:
              service:
                name: pgadmin-http
                port:
                  number: 8080
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - pgadmin.${serviceDomain}
      secretName: pgadmin.${serviceDomain}-tls
